--- a/config/package.json
+++ b/config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "masala",
+  "name": "contentbot",
   "version": "1.0.0",
   "dependencies": {
     "axios": "^0.16.2",
@@ -28,6 +28,7 @@
     "style-to-object": "^0.2.2",
     "sync-request": "^4.0.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-dev-server": "^2.11.2",
     "webpack-manifest-plugin": "^1.3.2",
     "webpack-md5-hash": "0.0.5"
   },
